--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,12 @@
 }
 
 body {
+    background-color: rgba(233, 233, 232, 0.576);
     font-size: 15px;
     text-align: center;
-    padding: 5% 12%;
+    padding: 5% 10%;
+    display: flex;
+    flex-direction: column;
 }
 
 .guide {
@@ -15,18 +18,19 @@ body {
 }
 
 #main {
-    background-color: hsl(0, 0%, 100%);
     overflow: hidden;
-    padding: 5%;
+    background-color: hsl(0, 0%, 100%);
+    padding: 7%;
     position: relative;
     margin-bottom: 20px;
     display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(2, minmax(300px, 1fr));
-    grid-template-rows: 1fr 1fr;
+    gap: 1rem;
     grid-template-areas: 
-    'left-container ratings'
-    'card-container';
+    'topbar ratings'
+    'card card';
+
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1.1fr;
 }
 
 #main .bg-top {
@@ -39,12 +43,13 @@ body {
     position:absolute;
     bottom: 0;
     right: 0;
-
 }
 
 .left-container {
     text-align: left;
-    padding: 2rem 7rem 2rem 2rem;
+    padding: 2rem 4rem 2rem 2rem;
+    grid-area: topbar;
+    min-width: 480px;
 }
 
 .left-container h1 {
@@ -52,20 +57,24 @@ body {
     font-size: 3rem;
     line-height: 1em;
     margin-bottom: 1rem;
+    margin-right: 2rem;
 }
 
 .left-container p {
     color:hsl(303, 10%, 53%);
     font-weight: 500;
     line-height: 1.6rem;
+    margin-right: 2rem;
 }
 
 .ratings {
+    grid-area: ratings;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     padding: 2rem;
+    min-width: 480px;
 }
 
 .ratings h2 {
@@ -74,10 +83,12 @@ body {
     color: hsl(300, 43%, 22%);
     font-size: 0.8rem;
     font-weight: 700;
-    padding: 1.5em 3em;
+    padding: 1.2rem 1.8rem;
     text-align: left;
-    width: 80%;
+    margin: .5rem 0;
+    width: 85%;
 }
+
 
 .ratings h2:first-child {
     align-self: flex-start;
@@ -87,26 +98,30 @@ body {
     align-self: flex-end;
 }
 
-.ratings img {
-    margin-right: 5px; 
+.ratings span {
+    display: inline;
+    margin-left: 1.5rem;
 }
 
-.ratings img:last-child {
-    margin-right: 1rem; 
+.ratings img {
+    margin-right: 2px; 
 }
 
 .card-container {
+    grid-area: card;
     grid-column: span 2 / auto;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 1fr;
+    column-gap: 1em;
     justify-content: space-between;
-    gap: 2rem;
     padding: 15px 2rem;
 }
 
 .card {
     background-color: hsl(300, 43%, 22%);
     border-radius: 10px;
-    padding: 35px;
+    padding: 2rem;
     text-align: left;
     font-size: .8rem;
 }
@@ -122,6 +137,7 @@ body {
 .card img {
     border-radius: 50%;
     grid-row: span 2 / auto;
+    margin-right: 100px;
     width: 50px;
 }
 
@@ -136,7 +152,6 @@ body {
 
 .card p {
     color: white;
-   
     line-height: 1.4rem;
 }
 
