--- a/styles/style.css
+++ b/styles/style.css
@@ -1,172 +1,283 @@
-@import url(<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">);
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap");
 
-* {
-    box-sizing: border-box;
-    font-family: 'Spartan', sans-serif;
-    margin: 0;
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
 }
+*,
+::before,
+::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+/* 600px */
+@media only screen and (max-width: 37.5em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+/* 375px */
+@media only screen and (max-width: 23.4375em) {
+  html {
+    font-size: 62.5%;
+  }
+}
+
+/* 900px / 16 = 56.25em
+
+600px / 16 = 37.5em
+ 
+375px / 16 = 23.4375em */
 
 body {
-    background-color: rgba(233, 233, 232, 0.576);
-    font-size: 15px;
-    text-align: center;
-    padding: 5% 10%;
-    display: flex;
-    flex-direction: column;
+  background-color: rgba(233, 233, 232, 0.576);
+  font-size: 1.6rem;
+  text-align: center;
+  padding: 5% 10%;
+  display: flex;
+  flex-direction: column;
+  font-family: "League Spartan", sans-serif;
 }
 
-.guide {
-    border: 1px solid magenta;
+.section-top {
+  display: flex;
+  align-items: center;
+}
+
+/* 900px */
+@media only screen and (max-width: 56.25em) {
+  .section-top {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
+.section-top > * {
+  width: 100%;
 }
 
 #main {
-    overflow: hidden;
-    background-color: hsl(0, 0%, 100%);
-    padding: 7%;
-    position: relative;
-    margin-bottom: 20px;
-    display: grid;
-    gap: 1rem;
-    grid-template-areas: 
-    'topbar ratings'
-    'card card';
-
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1.1fr;
+  overflow: hidden;
+  background-color: hsl(0, 0%, 100%);
+  padding: 7%;
+  position: relative;
+  margin-bottom: 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  max-width: 120rem;
+  margin-inline: auto;
 }
 
 #main .bg-top {
-    position:absolute;
-    left: 0;
-    transform: translateX(-15%);
+  position: absolute;
+  left: 0;
+  transform: translateX(-15%);
 }
 
 #main .bg-bottom {
-    position:absolute;
-    bottom: 0;
-    right: 0;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 .left-container {
-    text-align: left;
-    padding: 2rem 4rem 2rem 2rem;
-    grid-area: topbar;
-    min-width: 480px;
+  text-align: left;
+  padding: 2rem 4rem 2rem 2rem;
+}
+
+/* 900px */
+@media only screen and (max-width: 56.25em) {
+  .left-container {
+    padding: 2rem;
+  }
 }
 
 .left-container h1 {
-    color: hsl(300, 43%, 22%);
-    font-size: 3rem;
-    line-height: 1em;
-    margin-bottom: 1rem;
-    margin-right: 2rem;
+  color: hsl(300, 43%, 22%);
+  font-size: 4.7rem;
+  line-height: 0.9;
+  margin-bottom: 1rem;
 }
 
 .left-container p {
-    color:hsl(303, 10%, 53%);
-    font-weight: 500;
-    line-height: 1.6rem;
-    margin-right: 2rem;
+  color: hsl(303, 10%, 53%);
+  font-weight: 400;
+  line-height: 1.4;
+}
+
+/* 900px */
+@media only screen and (max-width: 56.25em) {
+  .left-container {
+    text-align: center;
+  }
 }
 
 .ratings {
-    grid-area: ratings;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 2rem;
+  gap: 1.5rem;
+}
+
+.rating-container {
+  background-color: hsl(300, 24%, 96%);
+  border-radius: 0.4rem;
+  color: hsl(300, 43%, 22%);
+  font-size: 1.5rem;
+  font-weight: 700;
+  padding: 1.2rem 1.8rem;
+  display: flex;
+  text-align: left;
+  align-items: center;
+}
+
+.icon-wrapper {
+  min-width: 12rem;
+}
+/* 900px */
+@media only screen and (max-width: 56.25em) {
+  .ratings {
     padding: 2rem;
-    min-width: 480px;
+  }
+  .rating-container {
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    max-width: 40rem;
+  }
+
+  .icon-wrapper {
+    min-width: 12rem;
+  }
 }
 
-.ratings h2 {
-    background-color: hsl(300, 24%, 96%);
-    border-radius: 0.4rem;
-    color: hsl(300, 43%, 22%);
-    font-size: 0.8rem;
-    font-weight: 700;
-    padding: 1.2rem 1.8rem;
-    text-align: left;
-    margin: .5rem 0;
-    width: 85%;
+.rating-container:first-child {
+  align-self: flex-start;
 }
 
-
-.ratings h2:first-child {
-    align-self: flex-start;
+.rating-container:last-child {
+  align-self: flex-end;
 }
 
-.ratings h2:last-child {
-    align-self: flex-end;
+/* 900px */
+@media only screen and (max-width: 56.25em) {
+  .rating-container:first-child {
+    align-self: center;
+  }
+
+  .rating-container:last-child {
+    align-self: center;
+  }
 }
+
+/* 
+
+    1200px / 16 = 75em
+
+    900px / 16 = 56.25em
+  
+    600px / 16 = 37.5em
+    
+    375px / 16 = 23.4375em */
 
 .ratings span {
-    display: inline;
-    margin-left: 1.5rem;
-}
-
-.ratings img {
-    margin-right: 2px; 
+  display: inline;
 }
 
 .card-container {
-    grid-area: card;
-    grid-column: span 2 / auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: 1fr;
-    column-gap: 1em;
-    justify-content: space-between;
-    padding: 15px 2rem;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(min-content, 40rem));
+  column-gap: 2rem;
+  justify-content: space-between;
+  padding: 0 2rem;
 }
 
 .card {
-    background-color: hsl(300, 43%, 22%);
-    border-radius: 7px;
-    padding: 2.5rem 2rem;
-    text-align: left;
-    font-size: .8rem;
+  background-color: hsl(300, 43%, 22%);
+  border-radius: 0.7rem;
+  padding: 2.5rem 3rem;
+  text-align: left;
+  font-size: 1.4rem;
 }
 
-.card .profile-header {
-    display: grid;
-    grid-template-columns: 25% 1fr;
-    align-items: center;
-    justify-items: self-start;
-    margin-bottom: 25px;
+/* 1200px */
+@media only screen and (max-width: 75em) {
+  .card-container {
+    grid-template-columns: repeat(1, minmax(min-content, 40rem));
+    justify-content: center;
+  }
+}
+
+/* 900px */
+@media only screen and (max-width: 56.25em) {
+  .card-container {
+  }
+}
+.profile-header {
+  display: grid;
+  grid-template-columns: 20% 1fr;
+  margin-bottom: 2.5rem;
+  row-gap: 0.4rem;
 }
 
 .card img {
-    border-radius: 50%;
-    grid-row: span 2 / auto;
-    margin-right: 100px;
-    width: 50px;
+  border-radius: 50%;
+  grid-row: span 2 / auto;
+  width: 3rem;
 }
 
 .card h3 {
-    color: hsl(0, 0%, 100%) ;
+  color: hsl(0, 0%, 100%);
+  font-size: 0.9em;
 }
 
 .card span {
-    color: hsl(333, 80%, 67%);
-    font-weight: 400;
+  color: hsla(333, 80%, 67%, 0.7);
+  font-weight: 400;
+  font-size: 0.9em;
 }
 
 .card p {
-    color: white;
-    line-height: 1.4rem;
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 1.5;
+  font-weight: 400;
 }
 
 .card-left {
-    align-self: flex-start;
-}
-
-.card-middle {
-    align-self: center;
+  transform: translateY(-2rem);
 }
 
 .card-right {
-    align-self: flex-end;
+  transform: translateY(2rem);
 }
+
+/* 375px */
+@media only screen and (max-width: 23.4375em) {
+  .card-left,
+  .card-middle,
+  .card-right {
+    align-self: center;
+  }
+  .card-container {
+    margin-right: 0rem !important;
+  }
+  .desc {
+    font-size: 1.6rem !important;
+  }
+
+  .card {
+    width: 100%;
+    max-width: 40rem;
+  }
+}
+/* 900px / 16 = 56.25em
+
+600px / 16 = 37.5em
+ 
+375px / 16 = 23.4375em */
